work done on dashboard not functional

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,8 @@
   "editor.formatOnSave": true,
   "[erb]": {
     "editor.defaultFormatter": "elia.erb-formatter"
+  },
+  "[html]": {
+    "editor.defaultFormatter": "vscode.html-language-features"
   }
 }
